--- a/package.json
+++ b/package.json
@@ -1,20 +1,35 @@
 {
-  "name": "cloud_final_backend",
+  "name": "hoteq",
   "version": "1.0.0",
   "description": "",
-  "license": "ISC",
-  "author": "",
-  "type": "commonjs",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.js"
   },
+  "author": "TNPTW",
+  "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.4.7",
-    "express": "^5.1.0"
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^6.7.0",
+    "helmet": "^6.0.1",
+    "hoteq": "file:",
+    "hpp": "^0.2.3",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^6.9.1",
+    "mysql": "^2.18.1",
+    "nodemailer": "^6.9.1",
+    "swagger-jsdoc": "^6.0.0",
+    "swagger-ui-express": "^4.6.3",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "nodemon": "^2.0.20"
   }
 }
